@startuml GESTOR DE CAMPEONATOS

/'
@title        GESTOR DE CAMPEONATOS
@description  Aplicación para crear, organizar y administrar campeonatos.
@author       Gerardo Tordoya
@date         2022-10-12
@remarks      *) Para los nombres se usó la convención de WideWorldImporters.
              *) Para los diagramas se usó la convención de Vertabelo.
'/

' ─── CONFIGURACIONES ──────────────────────────────────────────────────────────
' Configuración de plantilla.
skin rose
' skinparam classFontName Calibri
' skinparam shadowing false

' Configuración de diagrama.
hide circle
skinparam linetype ortho

' ─── TÍTULO ───────────────────────────────────────────────────────────────────
title Diseño de la Base de Datos SQL

' ─── ENTIDADES ────────────────────────────────────────────────────────────────
entity "CampeonatoParticipantes"
{
    CampeonatoParticipanteID \t int \t PK 
    ---
    CampeonatoID           \t\t int \t FK
    EquipoID             \t\t\t int \t FK
}


entity "CampeonatoPremios"
{
    CampeonatoPremioID \t int \t PK
    ---
    CampeonatoID     \t\t int \t FK
    PremioID       \t\t\t int \t FK
}


entity "Campeonatos"
{
    CampeonatoID \t int \t\t\t PK
    ---
    Nombre     \t\t nvarchar(200)
    Tarifa   \t\t\t money
    Activo   \t\t\t bit
}


entity "EquipoMiembros"
{
    EquipoMiembroID \t int \t PK
    ---
    EquipoID      \t\t int \t FK
    PersonaID     \t\t int \t FK
}


entity "Equipos"
{
    EquipoID \t int \t\t\t PK
    ---
    Nombre   \t nvarchar(100)
}


entity "PartidoJugadores"
{
    PartidoJugadorID      \t int \t\t PK
    ---
    PartidoActualID     \t\t int \t\t FK
    PartidoAnteriorID   \t\t int \t\t FK N
    EquipoID            \t\t int \t\t FK N
    Puntaje           \t\t\t float \t N
}


entity "Partidos"
{
    PartidoID  \t\t int \t PK
    ---
    CampeonatoID \t int \t FK
    GanadorID  \t\t int \t FK N
    Ronda      \t\t int
}


entity "Personas"
{
    PersonaID  \t int         \t\t PK
    ---
    Nombre     \t nvarchar(100)
    Apellido \t\t nvarchar(100)
    Email    \t\t nvarchar(100)
    Celular  \t\t varchar(20)   \t N
}


entity "Premios"
{
    PremioID       \t\t int \t\t\t PK
    ---
    PuestoNumero     \t int
    PuestoNombre     \t nvarchar(50)
    PremioMonto      \t money
    PremioPorcentaje \t float
}

' ─── RELACIONES ───────────────────────────────────────────────────────────────
Campeonatos ||--|{ CampeonatoParticipantes
Campeonatos ||--|{ CampeonatoPremios

Equipos     ||--|{ CampeonatoParticipantes
Equipos     ||--|{ EquipoMiembros
Equipos     ||--|{ PartidoJugadores
Equipos     ||--|{ Partidos

Partidos    ||--|{ PartidoJugadores

Personas    ||--|{ EquipoMiembros

Premios     ||--|{ CampeonatoPremios

' ─── NOTAS ────────────────────────────────────────────────────────────────────
note top of Personas: Sobre nvarchar \n**n:** //unicode// \n**var**: //variable length// \n**char**: //character//

note left of Premios: Prizes
note top of Campeonatos: Tournaments
note top of Equipos: Teams
note right of Personas: People

note left of CampeonatoPremios: TournamentPrizes
note bottom of CampeonatoParticipantes: TournamentEntries
note bottom of Partidos: Matchups
note right of PartidoJugadores: MatchupEntries
note right of EquipoMiembros: TeamMembers

' ─── SUBTÍTULO ────────────────────────────────────────────────────────────────
caption Última actualización: 2022-10-22

' ─── FIN ──────────────────────────────────────────────────────────────────────
@enduml
